# LLMFit

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
llmfit/: __init__.py  __main__.py  cli.py  database.py  detector.py  formatter.py  scorer.py  utils.py
tests/: __init__.py  test_detector.py  test_formatter.py  test_scorer.py
